--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    viewBinding.enabled = true
+
     defaultConfig {
         applicationId "com.brainbear.roundcornerlayout"
         minSdkVersion 19
